anesi leaf llm code

--- a/baselines/a-nesi/anesi/experiments/leaves/repeat/test_predict_only_llm.yaml
+++ b/baselines/a-nesi/anesi/experiments/leaves/repeat/test_predict_only_llm.yaml
@@ -1,5 +1,5 @@
-program: anesi/experiments/leaves/leafop.py
-project: leaves
+program: anesi/experiments/leaves/llmop.py
+project: leavesgpt
 entity: seewonchoi
 method: grid
 parameters:
