--- a/environment.yml
+++ b/environment.yml
@@ -20,8 +20,8 @@ dependencies:
   - ncurses=6.3
   - ninja=1.11.0
   - numpy=1.23.5
+  - openai-clip=1.0.1
   - openssl=3.0.7
-  - openai=1.6.1
   - pip=22.3.1
   - pycparser=2.21
   - python=3.9.15
@@ -31,12 +31,14 @@ dependencies:
   - readline=8.1.2
   - setuptools=65.5.1
   - sleef=3.5.1
+  - supervision=0.20.0 
   - tbb=2021.7.0
   - tk=8.6.12
   - torchvision=0.13.1
   - tqdm=4.64.1
   - typing_extensions=4.4.0
   - tzdata=2022f
+  - ultralytics=8.2.7
   - wheel=0.38.4
   - xz=5.2.6
   - yaml=0.2.5
