remove name from code

--- a/baselines/a-nesi/anesi/experiments/hwf/repeat/test_predict_only.yaml
+++ b/baselines/a-nesi/anesi/experiments/hwf/repeat/test_predict_only.yaml
@@ -1,6 +1,6 @@
 program: anesi/experiments/hwf/hwfop.py
 project: hwf
-entity: seewonchoi
+entity: blackbox-learning
 method: grid
 parameters:
   N:
