--- a/baselines/a-nesi/anesi/experiments/leaves/repeat/test_predict_only_llm.yaml
+++ b/baselines/a-nesi/anesi/experiments/leaves/repeat/test_predict_only_llm.yaml
@@ -1,6 +1,6 @@
 program: anesi/experiments/leaves/llmop.py
 project: leavesgpt
-entity: seewonchoi
+entity: blackbox-learning
 method: grid
 parameters:
   N:
