--- a/baselines/a-nesi/anesi/experiments/scene/repeat/test_predict_only.yaml
+++ b/baselines/a-nesi/anesi/experiments/scene/repeat/test_predict_only.yaml
@@ -1,6 +1,6 @@
 program: anesi/experiments/scene/run.py
 project: scene
-entity: seewonchoi
+entity: blackbox-learning
 method: grid
 parameters:
   N:
